--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body{
     color: #3B82F6;
 }
 
-.home{
+#home{
     height: 100vh;
     width: 100%;
     position: relative;
@@ -106,12 +106,12 @@ body{
     margin-top: 250px;
 }
 
-.home h1{
+#home h1{
     font-size: 65px;
     margin-bottom: 10px;    
 }
 
-.home h1 span{
+#home h1 span{
     font-size: 75px;
     color: #3B82F6;
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -119,7 +119,7 @@ body{
     cursor: pointer;
 }
 
-.home h2{
+#home h2{
     font-size: 40px;
     font-weight: bolder;
     margin-bottom: 15px;
@@ -128,12 +128,12 @@ body{
     cursor: pointer;
 }
 
-.home h1 span:hover{
+#home h1 span:hover{
     color: white;
     filter: drop-shadow(0px 0px 2px #3B82F6);
 }
 
-.home h2 span:hover{
+#home h2 span:hover{
     color: white;
     filter: drop-shadow(0px 0px 3px #3B82F6);
 }
@@ -563,15 +563,15 @@ footer .social img:hover{
         display: grid;
     }
 
-    .home h1{
+    #home h1{
         font-size: 40px;
     }
 
-    .home h1 span{
+    #home h1 span{
         font-size: 35px;
     }
 
-    .home h2{
+    #home h2{
         font-size: 25px;
     }
 
